cluster/apps/infrastructure/openldap/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openldap
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
