cluster/apps/infrastructure/openldap/ingress.yaml
---
# All this does is  grab a certificate
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openldap
  namespace: openldap
  annotations:
    kubernetes.io/ingress.class: internal
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: ldap-ingress.greyrock.io
      http:
        paths:
          - backend:
              service:
                name: http-echo
                port:
                  number: 80
            path: /ldapserver
            pathType: Prefix
  tls:
    - hosts:
        - ldap.greyrock.io
      secretName: openldap-cert
